fix the automatic zoom-in on input fields on mobile devices

--- a/src/styles/blocks/typography.scss
+++ b/src/styles/blocks/typography.scss
@@ -24,9 +24,3 @@
     line-height: 32.2px;
     font-weight: 400;
 }
-
-.text--sm {
-    font-size: 14px;
-    line-height: 20px;
-    font-weight: 400;
-}
